--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Hello Dev!</h1>
-    <h2>This is test website for Advance DevOps.</h2>
+    <h2>This is test website.</h2>
   </body>
 </html>
