--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello Dev!</h1>
-    <h2>This is test website.</h2>
+    <h1>Hello Dev Gaonkar!</h1>
+    <h2>This is test website for Tomcat.</h2>
   </body>
 </html>
